# mob

./: Cargo.toml  Dockerfile
.kubernetes/: deployment.yaml
src/: actions.rs  commands.rs  listener.rs  main.rs  movie_api.rs  query_handler.rs  repo.rs  slash_commands.rs  utils.rs
src/tmdb/: mod.rs  model.rs
